--- a/planificacion_presupuesto/view/plan_de_la_patria.xml
+++ b/planificacion_presupuesto/view/plan_de_la_patria.xml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 	<data>
-            
-<!-- Filtro de solicitudes de accion_centralizadaes (cod de solicitud y nombre del representante) -->
-<!--        <record model="ir.ui.view" id="buscar_accion_centralizada">
-            <field name="name">Solicitud</field>
-            <field name="model">accion.centralizada</field>
-            <field name="arch" type="xml">      
-                <search string="Busqueda Solicitudes de Soporte Canaimas">
-                    <filter name="accion_centralizadaes" domain="[('c_solicitud','=', uid)]" string="Solicitudes de Reparación" icon="terp-partner" />
-                    <field name="c_solicitud" />
-
-                </search>
-            </field>            
-        </record>-->
-<!--Menu-->
-
 <!--Registro Plan de Gobierno -->
 
 		<record model="ir.actions.act_window" id="plan_patria_list_action">
@@ -111,7 +96,19 @@
 				</form>
 			</field>			
 		</record>
-
+		
+<!-- Filtro Objetivos Históricos -->
+        <record model="ir.ui.view" id="buscar_objetivo_historico">
+            <field name="name">Objetivos Históricos</field>
+            <field name="model">objetivo.historico</field>
+            <field name="arch" type="xml">      
+                <search string="Busqueda de Objetivo Historico">
+			<filter name="busqueda_entes" domain="[('objetivo_historico','=', uid)]" string="Objetivos Historicos" icon="terp-partner" />
+			<field name="objetivo_historico"/>
+                </search>
+            </field>            
+        </record>
+		
 <!--Registro de objetivo_nacional -->
 
 		<record model="ir.actions.act_window" id="objetivo_nacional_list_action">
@@ -177,6 +174,20 @@
 				</form>
 			</field>			
 		</record>
+
+<!-- Filtro Objetivos Nacional -->
+        <record model="ir.ui.view" id="buscar_objetivo_nacional">
+            <field name="name">Objetivos Nacionales</field>
+            <field name="model">objetivo.nacional</field>
+            <field name="arch" type="xml">      
+                <search string="Busqueda de Objetivo Nacional">
+			<filter name="busqueda_nacional" domain="[('objetivo_nacional','=', uid)]" string="Objetivos Nacionales" icon="terp-partner" />
+			<field name="objetivo_historico"/>
+			<field name="objetivo_nacional"/>
+			<field name="plan_patria"/>
+                </search>
+            </field>            
+        </record>
 		
 <!--Registro  de  Objetivo Estratégico -->
 
@@ -252,8 +263,23 @@
 				</form>
 			</field>			
 		</record>
+	
+<!-- Filtro Objetivos Estratégicos -->
+		<record model="ir.ui.view" id="buscar_objetivo_estrategico">
+		    <field name="name">Objetivos estrategico</field>
+		    <field name="model">objetivo.estrategico</field>
+		    <field name="arch" type="xml">      
+			<search string="Busqueda de Objetivo Estratégico">
+				<filter name="busqueda_nacional" domain="[('objetivo_estrategico','=', uid)]" string="Objetivos Estratégicos" icon="terp-partner" />
+				<field name="objetivo_historico"/>
+				<field name="objetivo_nacional"/>
+				<field name="objetivo_estrategico"/>
+				<field name="plan_patria"/>
+			</search>
+		    </field>            
+		</record>
 
-		<!--Registro  de  Objetivo Estratégico -->
+		<!--Registro  de  Objetivo Generales -->
 
 		<record model="ir.actions.act_window" id="objetivo_general_list_action">
 		    <field name="name">Objetivos Generales </field>
@@ -262,7 +288,7 @@
 		    <field name="view_mode">tree,form</field>
 		</record> 
 
-<!--Form Tree  Objetivo Estratégico-->
+<!--Form Tree  Objetivo Generales-->
 
 		<record model="ir.ui.view" id="objetivo_general_tree_view">
 			<field name="name">Objetivos Generales  tree</field>
@@ -335,6 +361,22 @@
 		
 				</form>
 			</field>			
+		</record>
+		
+<!-- Filtro Objetivos Generales -->
+		<record model="ir.ui.view" id="buscar_objetivo_estrategico">
+		    <field name="name">Objetivos Generales</field>
+		    <field name="model">objetivo.general</field>
+		    <field name="arch" type="xml">      
+			<search string="Busqueda de Objetivo General">
+				<filter name="busqueda_general" domain="[('objetivo_general','=', uid)]" string="Objetivos Generales" icon="terp-partner" />
+				<field name="objetivo_historico"/>
+				<field name="objetivo_nacional"/>
+				<field name="objetivo_estrategico"/>
+				<field name="objetivo_general"/>
+				<field name="plan_patria"/>
+			</search>
+		    </field>            
 		</record>
 		
 		<menuitem id="plan_patria_menu" name="Plan de la Patria" parent="configuraciones_menu" sequence="4"/>
